[project]
name = "pixiv-image-grouper"
version = "0.1.0"
description = "A tool to group Pixiv images"
requires-python = ">=3.12"
dependencies = [
    "Pillow",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]

[tool.ruff.format]
indent-style = "space"

[project.scripts]
pixiv-image-grouper = "pixiv_image_grouper.main:main"

[tool.ty]
python-version = "3.12"

[dependency-groups]
dev = [
    "pyinstaller",
    "pytest",
    "ruff",
    "ty",
]
